--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Landongavin</title>
+  <title>'landongavin</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>html, body {
+    max-height: 100%;
+    max-width: 100%;
+    height: 100%;
+    width: 100%;
+    background: #ffffff url("assets/images/background-xsm.jpg") no-repeat fixed center;
+    background-size: cover;
+    padding: 0;
+    margin: 0;
+  }</style>
 </head>
 <body>
   <app-root>
 
-    WHOA TEST LOADING THE SITE!!!!!!!
+    <style>
+      app-root {
+        justify-content: center;
+        align-items: center;
+        height: 100%;
 
+        color: #c2185b;
+        text-transform: uppercase;
+        font-family: Roboto,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Oxygen-Sans,
+        Ubuntu,
+        Cantarell,
+        Helvetica,
+        sans-serif;
+        font-size: 2.5em;
+        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+      }
+
+      .wrapper {
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .wrapper div {
+        display: flex;
+      }
+
+      img {
+        width: 100px;
+        height: 75px;
+      }
+
+      body {
+        overflow: hidden;
+      }
+
+      @keyframes dots {
+        50% {
+          transform: translateY(-.4rem);
+        }
+        100% {
+          transform: translateY(0);
+        }
+      }
+
+      .bottom {
+        margin-bottom: 15px;
+      }
+
+      .d {
+        display: flex;
+        animation: dots 1.5s ease-out infinite;
+        line-height: 1em;
+        margin: 5px;
+      }
+
+      .d-2 {
+        animation-delay: .5s;
+      }
+
+      .d-3 {
+        animation-delay: 1s;
+      }
+    </style>
+    <div class="wrapper">
+      <div class="bottom">
+        <span class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span>
+      </div>
+      <br>
+      <div>
+        Do'n a heck'n load
+      </div>
+      <br>
+      <div>
+        <span class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2">.</span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
+        class="d d-3"><img src="assets/images/doge.gif"></span>
+      </div>
+    </div>
 
   </app-root>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
