--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,47 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5NSH74B');</script>
+  <!-- End Google Tag Manager -->
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107216240-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107216240-1');
+  </script>
+  <!-- End Global Site Tag -->
   <meta charset="utf-8">
   <title>landongavin</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>html, body {
-    max-height: 100%;
-    max-width: 100%;
-    height: 100%;
-    width: 100%;
-    background: #ffffff url("assets/images/background-xsm.jpg") no-repeat fixed center;
-    background-size: cover;
-    padding: 0;
-    margin: 0;
-  }</style>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5NSH74B"
+                    height="0" width="0" style="display:none;visibility:hidden">
+    </iframe>
+  </noscript>
+<!-- End Google Tag Manager (noscript) -->
   <app-root>
-
     <style>
-      app-root {
+      body {
         justify-content: center;
         align-items: center;
         height: 100%;
-
+        background: #ffffff url("assets/images/background-xsm.jpg") no-repeat fixed center;
+        background-size: cover;
         color: #c2185b;
         text-transform: uppercase;
         font-family: Roboto,
@@ -120,7 +135,6 @@
         class="d d-3"><img src="assets/images/doge.gif"></span>
       </div>
     </div>
-
   </app-root>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </body>
