removed background images/loading gifs.../changed styling,

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
 <body>
 <!-- Google Tag Manager (noscript) -->
   <noscript>
+    <h1>You don’t have javascript enabled.</h1>
+    <p>Please enable it to get the full experience.</p>
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5NSH74B"
                     height="0" width="0" style="display:none;visibility:hidden">
     </iframe>
@@ -40,10 +42,12 @@
         justify-content: center;
         align-items: center;
         height: 100%;
+        /*
         background: #ffffff url("assets/images/background-xsm.jpg") no-repeat fixed center;
+         */
+        background: #FAF9F5;
         background-size: cover;
         color: #c2185b;
-        text-transform: uppercase;
         font-family: Roboto,
         -apple-system,
         BlinkMacSystemFont,
@@ -78,14 +82,14 @@
         overflow: hidden;
       }
 
-      @keyframes dots {
+      /*@keyframes dots {
         50% {
           transform: translateY(-.4rem);
         }
         100% {
           transform: translateY(0);
         }
-      }
+      }*/
 
       .bottom {
         margin-bottom: 15px;
@@ -107,7 +111,7 @@
       }
     </style>
     <div class="wrapper">
-      <div class="bottom">
+      <!--<div class="bottom">
         <span class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
         class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
         class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
@@ -118,12 +122,12 @@
         class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
         class="d d-3"><img src="assets/images/doge.gif"></span>
       </div>
-      <br>
+      <br>-->
       <div>
-        Do'n a heck'n load
+        landongavin.com
       </div>
       <br>
-      <div>
+      <!--<div>
         <span class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2">.</span><span
         class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
         class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
@@ -133,7 +137,7 @@
         class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
         class="d d-3"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span class="d"><img src="assets/images/doge.gif"></span><span class="d d-2"><img src="assets/images/doge.gif"></span><span
         class="d d-3"><img src="assets/images/doge.gif"></span>
-      </div>
+      </div>-->
     </div>
   </app-root>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
